# learn_cuda_for_llm

./: .gitignore  README.md
breaking_llm/: qwen2_05_download.py
breaking_llm/learn-qwen2-0.5B/: README.md  pytorch_model_def.py  pytorch_run.py  qwen2_05_download.py  transforms_run.py  transforms_run_manual.py
breaking_llm/learn-qwen2-0.5B/deep_transforms_runner/: main.py  model_def.py
breaking_llm/learn-qwen2-0.5B/pytorch_runner/: kv_cache.py  main.py  model.py  model_def.py  model_test.py  rope.py  tokenizer.py  tokenizer_example.json
tensor-cpp/: CMakeLists.txt  README.md  Readme.md  main.cpp  main_cuda.cu  main_vector.cpp
tensor-cpp/benchmarks/: CMakeLists.txt  matmul_naive.cpp  matmul_naive_ijk.cpp  tensor_matmul_naive.cpp
tensor-cpp/include/: cuda_utils.h  greetings.h  tensor.h
tensor-cpp/include/utils/: random.h
tensor-cpp/src/: CMakeLists.txt  cpu_vector_add.cpp  cuda_vector_add.cu  greetings.cpp  tensor.cpp
tensor-cpp/tests/: CMakeLists.txt  test_tensor.cpp
tensor-cpp/tests/cpp/: test_greetings.cpp
tensor-cpp/tests/cuda/: test_vector_add.cu
test/: test_cuda.py  test_pycuda.py
test/ldmatrx/m8n8/: m8n8.cu  run_m8n8.py
test/ldmatrx/m8n8.trans/: m8n8.cu  run_m8n8.py
test/ldmatrx/m8n8.x4/: m8n8.cu  run_m8n8.py
test/mma/m16n8k16.row.row/: code.cu  run.py
test/others/: py_subclass.py
test/test_lamatrix_m8n8/: m8n8.cu  run_m8n8.py
